--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <script src="combinaciones.js" defer></script>
-    <title>Document</title>
+    <title>Combinaciones</title>
   </head>
   <body>
     <header><div id="show"></div></header>
